Fix images jumping

--- a/components/image-picker.module.scss
+++ b/components/image-picker.module.scss
@@ -25,6 +25,7 @@
 .image{
   margin: 5px;
   width: 100px;
+  height: auto;
   cursor: pointer;
 
   &.selected {
