--- a/containers/profile-info.module.scss
+++ b/containers/profile-info.module.scss
@@ -35,6 +35,6 @@
   margin: $global-spacing-big;
   img {
     width: 300px;
-    height: 300px;
+    height: auto;
   }
 }
